Implements skipping of command execution if a terminal is open. Begin implementation of servers detail page
